tests/invalid/raise_too_many_args/main.py
def run_case() -> None:
    raise ValueError("a", "b")

if __name__ == "__main__":
    run_case()
